clusters/hub/overlays/oadp-storage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oadp-storage
  annotations:
    argocd.argoproj.io/sync-options: Delete=false
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
