clusters/hub/overlays/oadp-storage/oadp-tenant-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: oadp
spec:
  to:
    kind: Service
    name: oadp-console
    weight: 100
  port:
    targetPort: http-console
  tls:
    termination: edge
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: oadp-minio-api
spec:
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: http-minio
  tls:
    termination: edge
  wildcardPolicy: None
